Fixed wrapping issue on mobile.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -746,6 +746,10 @@ footer a{
         text-align-last: center;
     }
 
+    .header-text h4{
+        text-align: center;
+    }
+
     .top {
         padding-left: 0px; 
         padding-right: 0px; 
@@ -860,13 +864,6 @@ footer a{
         padding-left: 20px;
         padding-right: 20px;
     }
-}
-
-@media all and (max-width: 400px){
-    /* .navbar ul li{
-        padding-left: 15px;
-        padding-right: 15px;
-    } */
 }
 
 @media all and (min-width: 2160px){
